# Gears

./: .gitignore  .pre-commit-config.yaml  README.md  curves.py  demos.py  gear_params.py  gui.py  helpers.py  plots.py  pyproject.toml  requirements.txt  run.py  tooth_profile.py  transforms.py
src/gears/: __init__.py  __main__.py  curves.py  gear_params.py  geometry.py  gui.py  helpers.py  tooth_profile.py  transforms.py
tests/: test_helpers.py
