[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gears"
version = "0.1.0"
authors = [
    { name="Sergii Dudkin", email="sergii.dudkin@gmail.com" },
]
description = "Modeling of spur gear transmission"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "numpy",
    "pre-commit",
    "scipy",
]

[project.urls]

[tool.hatch.build]
artifacts = [
    "src/gears/images/*.png",
]
